@@ -53,8 +53,11 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 	  branch. (#304134)
     + Correctly handles file id map generation for some stacked branches. (#310916)
 
-  * Handle children implicitly copied when replacing a directory with an older copy 
-    of itself. (#308353)
+  * Handle children implicitly copied when replacing a directory with an older 
+    copy of itself. (#308353)
+
+  * Invalidate revision ids of bzr-roundtripped revisions when the 
+    Subversion repository's UUID changes. (#318940, Debian #512325)
 
   PERFORMANCE
 
